2004-07-23  Åsmund Skjæveland  <aasmunds@fys.uio.no>

	* configure.in: Added "nn" to ALL_LINGUAS.
	* po/nn.po: Started Norwegian Nynorsk translation.

2004-07-22  Dan Winship  <danw@novell.com>

	* storage/ximian-connector.xml: Remove the quota command, since it
	wasn't implemented.

2004-07-19  Dan Winship  <danw@novell.com>

	* configure.in: 1.5.91

	* NEWS: Update

2004-07-16  Dan Winship  <danw@novell.com>

	* lib/e2k-kerberos.c (krb5_result_to_e2k_kerberos_result):
	"KRB5KDC_ERR_KEY_EXPIRED" is apparently a heimdal-only-ism. Use
	"KRB5KDC_ERR_KEY_EXP" instead.
	(e2k_kerberos_change_password): Likewise, use
	krb5_free_data_contents instead of krb5_data_free.

2004-07-15  Dan Winship  <danw@novell.com>

	* lib/e2k-kerberos.c: Lots of changes: properly namespace the
	functions (now "e2k_kerberos_check_password" and
	"e2k_kerberos_change_password"), remove the code that dealt with
	the local krb5.conf file (libkrb5 can autodetect the servers given
	the realm name), return status code enums rather than arbitrary
	krb5 error codes, and plug a few memory leaks.

	* lib/e2k-global-catalog.c (ntlm_bind): Fill in gc->domain with
	the name of the Windows 2000 domain.

	* lib/test-utils.c (test_ask_password): Split this (the
	password-asking routine) out of test_get_password so it can be
	used by cptest

	* lib/cptest.c: Update for e2k-kerberos changes, don't hard-code
	domain, and ask for the new password rather than taking it on the
	command line.

	* storage/exchange-account.c: Keep a copy of the e-passwords key
	around, rather than recomputing it in 5 different places.
	(is_password_expired): Update for e2k-kerberos changes
	(exchange_account_set_password): Update for e2k-kerberos changes.
	Pop up an error dialog if changing the password fails.
	(exchange_account_connect): When handling a forced password
	change, let the user "Cancel" if he wants.

	* storage/exchange-change-password.glade: HIGify a bit
