@@ -1,3 +1,14 @@
+2004-07-23  Dan Winship  <danw@novell.com>
+
+	* camel/camel-exchange-folder.c (init): Fix
+	folder->permanent_flags definition
+	(camel_exchange_folder_update_message_flags): Fix the list of
+	flags to not unset because they aren't set on the server to
+	include "JUNK" (since it's never set on the server).
+	(camel_exchange_folder_construct): Don't pass the non-server flags
+	to the server, or it will think they've changed and waste time
+	telling us so.
+
 2004-07-23  Åsmund Skjæveland  <aasmunds@fys.uio.no>
 
 	* configure.in: Added "nn" to ALL_LINGUAS.
